Fix z-index bug for .sparkline-tooltip in StagePerformance details page.
We cannot see the tooltip clearly, because it is under the modal layer
now.

--- a/presto-main/src/main/resources/webapp/assets/presto.css
+++ b/presto-main/src/main/resources/webapp/assets/presto.css
@@ -337,7 +337,7 @@ pre {
     white-space: nowrap;
     padding: 0 40px 5px 5px;
     border: none;
-    z-index: 100;
+    z-index: 1051;
 }
 
 /** Query list **/
